fixed css issues with cards, about section, newsletter form and exhibit cards on ie

--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -19,15 +19,14 @@ NEWSLETTER
 		display: flex;
 		justify-content: center;
 		.tnp-widget {
-			// width: auto;
 			 form {
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
 
 				@media (min-width: $large) {
-					flex-direction: row;
-					align-items: flex-end;
+					.tnp-field {
+						display: inline-block;
+						vertical-align: bottom;
+					}
+
 				}
 			 }
 		}
