--- a/css/layout/_navigation.scss
+++ b/css/layout/_navigation.scss
@@ -4,6 +4,9 @@
 	// }
 	justify-content: space-between;
 }
+.navbar-nav {
+	list-style-type: none;
+}
 .navbar {
 	// TC logo and Travis County Archives, Austin, TX text
 	padding: .5rem 0.25rem;
