--- a/css/pages/_exhibits.scss
+++ b/css/pages/_exhibits.scss
@@ -1,5 +1,5 @@
 a.exhibit {
-
+    margin: 0 auto;
     &:hover {
         color: $text-primary;
         text-decoration: none;
@@ -9,21 +9,21 @@ a.exhibit {
         padding: 1rem;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
         &:hover {
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
         }
-        img {
-            align-self: center;
-        }
-        @media (min-width: $small) {
+        @media (min-width: $medium) {
             flex-direction: row;
         }
+        > * {
+            flex: 1 1 auto;
+        }
         .exhibit-text {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
             padding: 1.5rem;
+
         }
     }
 }
