--- a/css/pages/_front.scss
+++ b/css/pages/_front.scss
@@ -1,94 +1,22 @@
 
-//banner text for history day banner on front page
-// .banner-text {
-//     display: flex;
-//     position: relative;
-//     background-color: $background-secondary;
-//     justify-content: center;
-//     align-items: center;
-//     margin-top: 0;
-//     padding: 2rem;
-//     > * > *{
-//         color: darken($text-primary, 15%);
-//         font-family: 'Alice', serif;
-//     }
-//     @media (max-width: $small) {
-//         padding: 1rem;
-//     }
-//     h4 {
-//         margin-top: 1rem;
-//         margin-bottom: 0;
-//     }
-//     > div:nth-child(2) {
-//         border-left: 1px solid darken($text-primary, 15%);
-//         p:last-child {
-//             margin-bottom: 0;
-//         }
-//     }
-//     div {
-//         padding: 0 2rem;
-//     }
-//     button {
-//         padding: 0.75rem;
-//         color: white;
-//         cursor: pointer;
-//         border-radius: 8px;
-//         border: none;
-//         background-color: $links-primary;
-//         transition: 0.5s ease-in-out;
-//         &:hover {
-//             background-color: darken($links-primary, 20%);
-//         }
-//     }
-//     @media (min-width: $large) and (max-width: $xl) {
-//         display: block;
-//         background-color: transparent;
-//         position: absolute;
-//         left: 25px;
-//         top: 50%;
-//         transform: translateY(-50%);
-//         margin-top: -50px;
-//         padding: 1rem;
-//         h4 {
-//             margin-bottom: 2rem;
-//         }
-//         > div:nth-child(2) {
-//             border-left: none;
-
-//         }
-//     }
-//     @media (min-width: $xl) {
-//         display: block;
-//         background-color: transparent;
-//         position: absolute;
-//         left: 25px;
-//         top: 50%;
-//         transform: translateY(-50%);
-//         margin-top: 25px;
-//         h4 {
-//             margin-bottom: 2rem;
-//         }
-//         > div:nth-child(2) {
-//             border-left: none;
-//         }
-//     }
-// }
 .cards--front {
-//    align-items: flex-start;
     @include fluid-type(padding-bottom padding-top, $tiny, $xl, 4rem, 8rem);
 }
-.cards--front_single {
+.cards--front-single {
     @include fluid-type(padding-bottom padding-top, $tiny, $large, 2rem, 0rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    img {
-        transform: scale(0.5);
-        margin-top: -28px;
-        @media (min-width: $large) {
-            transform: scale(0.75);
-            margin-top: -15px;
+    display: block;
+    .cards--front-img {
+        text-align: center;
+        img {
+            margin-left: auto;
+            margin-right: auto;
+            transform: scale(0.5);
+            margin-top: -28px;
+            @media (min-width: $large) {
+                transform: scale(0.75);
+                margin-top: -15px;
 
+            }
         }
     }
     h4 {
@@ -104,37 +32,48 @@
     }
     p {
         margin-bottom: 0 !important;
+        text-align: center;
     }
     @media (min-width: $large) {
         padding: 0 4rem;
-        //align-items: left;
+        p {
+            text-align: left;
+        }
     }
 }
 .about {
     background-color: $background-secondary;
     .about--front {
-            //display: flex;
-            //align-items: center;
             @include fluid-type(padding-bottom padding-top, $tiny, $xl, 4rem, 8rem);
 
             .about--title {
-                display: flex;
-                align-items: center;
-                padding-bottom: 2rem;
+                // display: flex;
+                // align-items: center;
+                position: relative;
+
                 @media (min-width: $large) {
                     padding: auto;
                 }
                 h1 {
+
                     margin: 0;
                     line-height: 1.5;
+                    padding-bottom: 2rem;
+                    @media (min-width: $large) {
+                        padding-bottom: 0;
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
 
                 }
             }
             .about--line {
                 display: flex;
-                align-items: center;
-                position: relative;
+                //align-items: center;
+                //position: relative;
                 span {
+                    display: block;
                     @media (min-width: $large) {
                         border-left:2px $text-primary solid;
                         //position:absolute;
@@ -145,10 +84,17 @@
 
             }
             .about--text {
-                display: flex;
-                align-items: center;
+                //display: flex;
+                //align-items: center;
+                position: relative;
                 p {
+
                     margin-bottom: 0;
+                    @media (min-width: $large) {
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                    }
                 }
             }
     }
